# CPP-Template

./: CMakeLists.txt  CMakePresets.json  index.html  teachstack.json
modules/HelloWorld/hello_world/: CMakeLists.txt
modules/HelloWorld/hello_world/exercise/: main.cpp
modules/HelloWorld/hello_world/tests/: hello_test.cc  tests.cpp
modules/HelloWorld2/hello_world_two/: CMakeLists.txt
modules/HelloWorld2/hello_world_two/instructions/: instruction.md
modules/HelloWorld2/hello_world_two/tests/: hello_test.cc
